Fix for StreamCard-Item Alignment

--- a/flask-nginx-rtmp-mgmt/static/css/main.css
+++ b/flask-nginx-rtmp-mgmt/static/css/main.css
@@ -93,6 +93,10 @@
 }
 
 @media screen and (max-width : 640px) {
+    .stream{
+        margin: 0px;
+    }
+
     .streamcard {
         margin:0 auto;
         width:280px;
